--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lenis": "^1.3.4",
